--- a/templates/sdk-native.html
+++ b/templates/sdk-native.html
@@ -33,7 +33,6 @@
         }
 
         #content {
-            height: 100%;
             position: relative;
         }
 
@@ -195,8 +194,10 @@
                 <img src="{{ .Image3 }}" id="image3" />
             </div>
         </a>
-        <div id="video_box"><video src="{{ .VideoURL }}" poster="{{ .Image1 }}"
-                controlsList="nodownload" controls webkit-playsinline="true" playsinline="true"></video></div>
+        <div id="video_box">
+            <video src="{{ .VideoURL }}" poster="{{ .Image1 }}"
+                controlsList="nodownload" controls webkit-playsinline="true" playsinline="true"></video>
+        </div>
     </div>
     <script type="text/javascript">
         (function () {
